# multi-i18n

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.bat  build.sh  file_version_info.txt  main.py  manager.py  multi_i18n.spec  pytest.ini  release-config.yml  requirements.txt  test.bat
.github/workflows/: Build&Release.yml  pytest.yml  release.yml
API/: C.md
generators/: __init__.py  base.py  c_generator.py  python_generator.py
templates/: c_template.c.j2  c_template.h.j2  python_template.j2
tests/: CMakeLists.txt  test.md  test_c_generator.py  test_main.py  test_manager.py  test_multi_i18n.c  test_yaml_loader.py
utils/: Logger.py  __init__.py  yaml_loader.py
